stderr
ChristmasSongTest.java:48: error: method test_whole_second_verse() is already defined in class ChristmasSongTest
    void test_whole_second_verse() {
         ^
1 error
